--- a/badui.css
+++ b/badui.css
@@ -37,6 +37,7 @@ p, span, h1, label {
 	font-size: 16px;
 	border-radius: 12px;
 	margin: 10px;
+	padding-left: 100px;
   position: absolute;
 }
 .button:hover {
